
Ver.5.0 (in development)
- Change the URL of INTER-Mediator in INTER-Mediator.js.
- Modify "Asset Management Sample" for the INTER-Mediator-Server virtual machine.
- Thanks to Mr. Kazuaki Osawa for cooperating to clarify the platform issue about the vm build script.
- Thanks to Ms. Naomi Hamaji for sponsored the upcomming Study Meeting.
- [BUG FIX] Fix Vagrantfile, deploy.sh and recipe.rb etc. for the INTER-Mediator-Server virtual machine.

Ver.4.7 (2015/1/25)
- The "Soft-Delete" or "Logical-Delete" is implemented. The 'soft-delete' key can be set up on a context
  of definition file. The sample is the "logical-delete" of the "Debugging" group.
- The Page File Editor appears in the INTER-Mediator-Support directory.
- The seeding files for the vm to trial are take place in the dist-docs/vm-for-trial directory.
- The Definition File Editor supports the 'navi-control' and 'calculation' keys.
- Output X-XSS-Protection response header to enable XSS filter.
- Improve performance of portal access mode for FileMaker Server.
- Add null database class (DB_Null.php).
- Update Sample_realtime (invoice_FMS.html/invoice_MySQL.html) for compatibility with SSL/TLS.
- Add Sample_easyToUnderstand and Sample_forDebugging for FileMaker Server in the "Samples" directory.
- Modify "context-test" of Sample_forDebugging.
- Rebuild TestDB.fmp12 and update sample_schema_filemaker.php to add tables ("item_master", "customer" and 
  "saleslog").
- Add TestDB_clone.fmp12 and TestDBSchemeForFMS.xlsx.
  (Thanks to TableClipper! <http://www.key-planning.co.jp/software/tableclipper/tableclipper-en/>).
- Remove unnecessary IMLibTarget object from INTER-Mediator-Element.js.
- [INFO] We prepared the INTER-Mediator-Server virtual machine for trial and learning purpose.
- [INFO] The dist-docs/sample_schema_mysql.txt describes the encode as utf8mb4.
         It means the schema support MySQL 5.5.3 or above.
- [SECURITY FIX] Fix Reflected XSS issue when using the file upload component.