@@ -32,6 +32,7 @@ Ver.5.0 (in development)
 - Modify "Asset Management Sample" for the INTER-Mediator-Server virtual machine.
 - Thanks to Mr. Kazuaki Osawa for cooperating to clarify the platform issue about the vm build script.
 - Thanks to Ms. Naomi Hamaji for sponsored the upcomming Study Meeting.
+- [BUG FIX] Fix compatibility with the private browse mode of Safari when handling the Local Context.
 - [BUG FIX] Fix Vagrantfile, deploy.sh and recipe.rb etc. for the INTER-Mediator-Server virtual machine.
 
 Ver.4.7 (2015/1/25)
